v2.1.0.5
--------
* Removed the "progbar" option on the TD comand line as this no longer does anything and the progress bar is the default.
* Fixed issue with availableShips being null.

v2.1.0.4
--------
* Added support for "--ls-max" and "--planetary" to the OldData command.
* Changed the caption and tool tip for the route option on the old data panel.
* Reduced default limit from 42 to 10 when route is checked since sorting for best distance overall is not an O(n) solution.
* Added missing --pad option to old data panel.

v2.1.0.3
--------
* Fixed bug in commander profile. Issue #48.
* Added clear separator method in ship drop down list.

v2.1.0.2
--------
* Removed any empty options in the update DB command. Fixes issue #47.

v2.1.0.1
--------
* Changed to use the EDAPI plugin supplied with tradedangerous. Thanks to gazelle and eyeonus for updating this.
* Added cAPI timeout to prevent hammering of the API.

v2.1.0.0
--------
* NetLogs disabled if the user presses cancel when asked to locate the AppConfig.xml file.
* EDCE removed.
* Commander Profile requires access token from Frontier.
* Added Krait Phantom and Mamba ship data.

v2.0.8.5
--------
* Only update the commodity lists if they have not been previously set.
* Reload the commodity drop down lists after a database update.
* Fixed some missing and incorrect tool tips.
* Tooltips now multi-lingual.

v2.0.8.4
--------
* Sell commodity drop down now only allows one item to be selected.

v2.0.8.3
--------
* Fixed issue #40.
* Fixed issue #39.
* Changed commodity drop down list to a check box form to allow multiple items to be selected.

v2.0.8.2
--------
* Added missing Adder in initial ship list.
* The ship list now lists the ships owned by the commander (after a Commander Profile update) followed by a list of all available ship in their "just bought" configuration. The two sections are separated by a line in the list.