@@ -248,7 +248,7 @@ en-gb="Keeps items sorted by price when using near (otherwise items are listed b
 en-gb="Sort by price rather than proximity."
 
 [Tooltip-084]
-en-gb="Sort the results of OldData into a route with the shortest distance to visit all systems."
+en-gb="Sort the results of OldData into a route with the shortest distance to visit all systems. WARNING: This may take a very long time. You should limit the number of result to 10 or less when using this option."
 
 [Tooltip-085]
 en-gb="List only items sold by the station (listed as 'BUY' in-game)."
